fix header spacing

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,5 +1,5 @@
 .site-header {
-  padding: 50px;
+  padding-top: 300px;
   display: flex;
   justify-content: center;
   width: 100%;
@@ -14,7 +14,7 @@
 .portfolio-title {
   margin: 0;
   color: #fff;
-  font-size: 10rem;
+  font-size: 11rem;
   font-weight: 700;
   font-family: 'Roboto', sans-serif;
   text-decoration: none;
